--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ h1{
         font-size: 10vw; 
     }
     .game {
-        height: 65vw; /* Maximize board size on small devices */
+        height: 65vh; /* Maximize board size on small devices */
         width: 65vw;
         gap: 2vw;
     }
